Fixed critter section selection buttons being formatter weirdly on narrow screens

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -10,7 +10,7 @@
   background-color: #eff7f1;
 }
 
-.crittercard.bug > .crittercard-body {
+.crittercard > .crittercard-body {
   min-height: 300px;
   padding-bottom: 0 !important;
 }
@@ -120,7 +120,29 @@
 @media (max-width: 576px) {
   .card-columns {
     column-count: 1 !important;
-  }  
+  }
+
+  .crittercard {
+    margin-top: 80px !important;  /* Little more space needed somehow */
+    /* Needed to keep cards in center */
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* Make critter selection buttons and text smaller so they fit on one line */
+  .critter-section-label {
+    font-size: 1.2rem !important;
+    margin-bottom: 0 !important;
+  }
+
+  .critter-button {
+    width: 3em !important;
+    height: 3em !important;
+  }
+
+  .critter-button > h2 {
+    font-size: 1.5rem !important;
+  }
 }
 
 /* Global */
